<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.danidipp.dippgen</groupId>
  <artifactId>dippgen</artifactId>
  <version>1.0</version>

  <packaging>jar</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>
  <repositories>
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
        <id>sk89q-repo</id>
        <url>https://maven.enginehub.org/repo/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
          <groupId>org.spigotmc</groupId>
          <artifactId>spigot-api</artifactId>
          <version>1.20.1-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>com.sk89q.worldguard</groupId>
        <artifactId>worldguard-bukkit</artifactId>
        <version>7.0.0</version>
        <scope>provided</scope>
        <exclusions>
          <exclusion>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
          </exclusion>
        </exclusions>
    </dependency>
    <!-- <dependency>     
      <groupId>com.google.code.gson</groupId>     
      <artifactId>gson</artifactId>     
      <version>2.10.1</version>     
    </dependency>     -->
  </dependencies>
  <build>
    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>${project.basedir}/src/main/resources</directory>
        <includes>
          <include>plugin.yml</include>
          <include>config.yml</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
          <artifactId>maven-antrun-plugin</artifactId>
          <configuration>
              <tasks>
                  <copy file="target/dippgen-1.0.jar" todir="target/plugins"/>
              </tasks>
          </configuration>
          <executions>
              <execution>
                  <phase>install</phase>
                  <goals>
                      <goal>run</goal>
                  </goals>
              </execution>
          </executions>
      </plugin>
  </plugins>
  </build>
  
</project>